--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  input {
+    @apply w-72 h-14 border-2 border-slate-300 rounded-xl mx-4 px-3 outline-none text-xl;
+  }
+
+  #div1,
+  #div2,
+  #image-wrapper {
+    @apply flex justify-center align-middle items-center;
+  }
+}
